# la-homelessness-lakehouse

./: .gitignore  README.md  lakehouse.duckdb  pyproject.toml  requirements.txt  workspace.yaml
.tmp_dagster_home_930qg8zl/history/: runs.db
.tmp_dagster_home_930qg8zl/schedules/: schedules.db
.tmp_dagster_home_930qg8zl/storage/: bronze_expenses  gold_expenses  silver_expenses
01_pipelines/: iceberg_catalog.py
data/clean/: la_homelessness.parquet
gold/lacity_business/: .part-00000-7a77d82f-4453-409a-a1ea-4eca90c5131d-c000.snappy.parquet.crc  .part-00001-7a77d82f-4453-409a-a1ea-4eca90c5131d-c000.snappy.parquet.crc  .part-00002-7a77d82f-4453-409a-a1ea-4eca90c5131d-c000.snappy.parquet.crc  .part-00003-7a77d82f-4453-409a-a1ea-4eca90c5131d-c000.snappy.parquet.crc  part-00000-7a77d82f-4453-409a-a1ea-4eca90c5131d-c000.snappy.parquet  part-00001-7a77d82f-4453-409a-a1ea-4eca90c5131d-c000.snappy.parquet  part-00002-7a77d82f-4453-409a-a1ea-4eca90c5131d-c000.snappy.parquet  part-00003-7a77d82f-4453-409a-a1ea-4eca90c5131d-c000.snappy.parquet
gold/lacity_business_by_district/: .part-00000-a1524308-d788-44a2-b19e-e4bd72fd6b6f-c000.snappy.parquet.crc  part-00000-a1524308-d788-44a2-b19e-e4bd72fd6b6f-c000.snappy.parquet
la_homelessness_lakehouse.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
lh_orch/: README.md  definitions.py  pyproject.toml
lh_orch/.tmp_dagster_home_hkz0tmtz/history/: runs.db
lh_orch/.tmp_dagster_home_hkz0tmtz/history/runs/: .db  index.db
lh_orch/.tmp_dagster_home_hkz0tmtz/schedules/: schedules.db
lh_orch/.tmp_dagster_home_s32rtes_/history/: runs.db
lh_orch/.tmp_dagster_home_s32rtes_/history/runs/: index.db
lh_orch/.tmp_dagster_home_s32rtes_/schedules/: schedules.db
lh_orch/lh_assets/: __init__.py  bronze_acs.py  bronze_expenses.py  counts.py  gold_acs.py  gold_expenses.py  lacity_jobs.py  lacity_sensor.py  silver_acs.py  silver_expenses.py
notebooks/: silver_exploration.ipynb
src/: gold_business_by_district.py  gold_geography.py  gold_lacity_business.py  silver_lacity_business.py  validate_gold_layer.py
(+48 files in other folders)
