[project]
name = "la-homelessness-lakehouse"
version = "0.3.0"
description = "LA Homelessness Lakehouse Dagster Orchestrator"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dagster",
    "dagster-webserver",
    "pyspark",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["lh_orch"]

[tool.dagster]
module_name = "lh_orch"
