[project]
name = "la-homelessness-lakehouse"
version = "0.1.0"
description = "dagster imports the definitions python module listed in the tool.dagster
               section and looks for my defs object"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "dagster",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[build-system]
requires = ["hatchling>=1.19.0"]
build-backend = "hatchling.build"

[tool.dagster]
module_name = "lh_orch.definitions"

[tool.hatch.build.targets.wheel]
packages = ["lh_orch"]
